Final cleanup: Use Ui class, simplify flags, and fix Checkstyle newline